sample/codepkg/objects/JDRF_Location__c.object
<CustomObject>
    <fields>
        <fullName>Current_boh_Inventory__c</fullName>
        <label>Current_boh_Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory_Request</label>
        <referenceTo>Inventory_Request__c</referenceTo>
        <relationshipLabel>JDRF_Location</relationshipLabel>
        <relationshipName>JDRF_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Units_Requested__c</fullName>
        <label>Number of Units Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>JDRF_Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>JDRF_Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JDRF_Location</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>